--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PR_Tarea3HernandezBarriosMarcoAntonio">
+        <activity android:name=".ListadoProductos" />
+        <activity android:name=".Preferencias" />
+        <activity android:name=".InsertarProducto" />
+        <activity android:name=".EliminarProducto" />
+        <activity android:name=".FichaProducto" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
